@@ -648,12 +648,23 @@ rsvg_characters (void *data, const xmlChar *ch, int len)
 		}
 }
 
+#if LIBXML_VERSION >= 20622
+#define RSVG_ENABLE_ENTITIES
+#elif defined(__GNUC__)
+#warning "libxml version less than 2.6.22. XML entities won't work"
+#endif
+
+#ifdef RSVG_ENABLE_ENTITIES
+
 static xmlEntityPtr
 rsvg_get_entity (void *data, const xmlChar *name)
 {
 	RsvgHandle *ctx = (RsvgHandle *)data;
-	
-	return (xmlEntityPtr)g_hash_table_lookup (ctx->entities, name);
+	xmlEntityPtr entity;
+
+	entity = g_hash_table_lookup (ctx->entities, name);
+
+	return entity;
 }
 
 static void
@@ -666,12 +677,12 @@ rsvg_entity_decl (void *data, const xmlChar *name, int type,
 	char *dupname;
 
 	entity = g_new0 (xmlEntity, 1);
-	entity->type = type;
-	entity->length = strlen ((char *)name);
+	entity->type = XML_ENTITY_DECL;
 	dupname = g_strdup ((char *)name);
 	entity->name = dupname;
 	entity->ExternalID = g_strdup (publicId);
 	entity->SystemID = g_strdup (systemId);
+	entity->etype = type;
 	if (content)
 		{
 			entity->content = xmlMemStrdup ((char *)content);
@@ -680,10 +691,12 @@ rsvg_entity_decl (void *data, const xmlChar *name, int type,
 	g_hash_table_insert (entities, dupname, entity);
 }
 
+#endif
+
 static void
 rsvg_error_cb (void *data, const char *msg, ...)
 {
-#ifdef G_ENABLE_DEBUG
+#if 1 /*def G_ENABLE_DEBUG*/
 	va_list args;
 	
 	va_start (args, msg);
@@ -703,9 +716,12 @@ static void rsvg_SAX_handler_struct_init()
 			rsvgSAXHandlerStructInited = TRUE;
 
 			memset(&rsvgSAXHandlerStruct, 0, sizeof(rsvgSAXHandlerStruct));
-			
+
+#ifdef RSVG_ENABLE_ENTITIES			
 			rsvgSAXHandlerStruct.getEntity = rsvg_get_entity;
 			rsvgSAXHandlerStruct.entityDecl = rsvg_entity_decl;
+#endif
+
 			rsvgSAXHandlerStruct.characters = rsvg_characters;
 			rsvgSAXHandlerStruct.error = rsvg_error_cb;
 			rsvgSAXHandlerStruct.cdataBlock = rsvg_characters;
