@@ -2,6 +2,8 @@
 
 	* configure.in: 2.12.7
 	* rsvg-cond.c: Fix up <switch> conditional comparisons
+	* rsvg.c: Make XML entities work, thus passing a few more conformance tests. Needs libxml2 2.6.22 or better.
+	Disable entities otherwise.
 
 2005-10-08 Caleb Moore <c.moore@student.unsw.edu.au>
 	
